# LLM-Observability-Pipeline-Test

./: .env.example  .gitignore  .pre-commit-config.yaml  app.py  build.py  cdk.json  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml
.github/workflows/: ci.yml
cdk_stack/: __init__.py  ai_observability_stack.py
cdk_stack/lambda/feedback/: feedback.py
cdk_stack/lambda/flagging/: flagging.py
cdk_stack/lambda/ingest/: __init__.py  ingest.py
cdk_stack/lambda/metrics/: metrics.py
cdk_stack/lambda/processor/: processor.py
cdk_stack/lambda/scorer/: scorer.py
docs/specs/: 00_system_overview.md  01_architecture.md  02_data_model.md  03_workflows_and_api.md  04_implementation_plan.md  05_local_development.md  06_result_schemas.md  07_cloud_deployment.md
src/: config.py  exceptions.py  models.py  scoring.py  validation.py
tests/: conftest.py  test_config.py  test_feedback.py  test_ingest.py  test_models.py  test_scoring.py  test_scoring_lambda.py  test_validation.py
