[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "llm-observability-pipeline"
version = "0.1.0"
description = "Production-grade LLM observability pipeline on AWS"
requires-python = ">=3.12"
dependencies = [
    "aws-cdk-lib>=2.130.0",   # CDK infrastructure definitions
    "constructs>=10.0.0",      # CDK construct base
    "pydantic>=2.6.0",         # Config validation and data models
    "pydantic-settings>=2.2.0", # BaseSettings for env-var config
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",           # Test runner
    "pytest-cov>=5.0.0",       # Coverage reporting
    "pytest-mock>=3.12.0",     # Mock fixtures
    "moto[dynamodb,kinesis,s3,sqs,sns]>=5.0.0",  # AWS service mocks
    "boto3>=1.34.0",           # AWS SDK (Lambda runtime provides this)
    "black>=24.0.0",           # Code formatter
    "ruff>=0.4.0",             # Linter
    "mypy>=1.9.0",             # Static type checker
    "boto3-stubs[dynamodb,kinesis,sqs,sns,cloudwatch]>=1.34.0",  # boto3 type stubs
]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
exclude = ["cdk_stack/", "tests/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "cdk_stack/*"]
